edit org - text fields bigger on large screens, fix placeholder overflow, language changes

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -9,3 +9,7 @@
 .scroll-margin-navbar {
   scroll-margin-top: 91px;
 }
+
+.tagify__input::before{
+  position:static;
+}
